# enrix

./: README.md  pyproject.toml
src/enrix/: .gitignore  __main__.py  settings.py
src/enrix/core/: company_enricher.py  header_factory.py  header_manager.py  parser.py  text_extractor.py  text_parser.py
src/enrix/io/: file_reader.py  file_writer.py
src/enrix/jobs/: job.py
