[project]
name = "enrix"
version = "0.1.0"
description = "A simple data enricher tool"
authors = [
    { name = "Navaneethan Ghanti", email = "navaneethan.ghanti@gmail.com" }
]
readme = "readme.md"
requires-python = ">=3.8"
dependencies = ["requests",
                "lxml"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
enrix = "enrix.__main__:main"